force-app/main/default/objects/VGE_PL_Country_Summary__c/VGE_PL_Country_Summary__c.object-meta.xml
<CustomObject>
    <label>VGE PL Country Summary</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>VGE_PL_Country_Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VGE PL Country Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>