force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/BB_CTNs_Existing__c.field-meta.xml
<CustomField>
    <fullName>BB_CTNs_Existing__c</fullName>
    <label>BB CTNs (Existing)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>