force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Bid_Years__c.field-meta.xml
<CustomField>
    <fullName>Bid_Years__c</fullName>
    <label>Bid Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>