force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/CountryIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CountryIsoCode__c</fullName>
    <formula>VGE_Country__r.CountryIsoCode__c</formula>
    <label>CountryIsoCode</label>
    <type>Text</type>
</CustomField>