force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/HH_CTNs_New__c.field-meta.xml
<CustomField>
    <fullName>HH_CTNs_New__c</fullName>
    <label>HH CTNs (New)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>