force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/LookupVGEPLIterationAP__c.field-meta.xml
<CustomField>
    <fullName>LookupVGEPLIterationAP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LookupVGEPLIterationAP</label>
    <referenceTo>VGE_PL_Iteration__c</referenceTo>
    <relationshipLabel>VGE PL Country Summary</relationshipLabel>
    <relationshipName>VGE_PL_Country_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>