force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/LookupVGEPLIterationOpCo__c.field-meta.xml
<CustomField>
    <fullName>LookupVGEPLIterationOpCo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LookupVGEPLIterationOpCo</label>
    <referenceTo>VGE_PL_Iteration__c</referenceTo>
    <relationshipLabel>VGE PL Country Summary (LookupVGEPLIterationOpCo)</relationshipLabel>
    <relationshipName>VGE_PL_Country_Summary1</relationshipName>
    <type>Lookup</type>
</CustomField>