force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/MCC_CTNs_Existing__c.field-meta.xml
<CustomField>
    <fullName>MCC_CTNs_Existing__c</fullName>
    <label>MCC CTNs (Existing)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>