force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_Cost_Converted__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Converted__c</fullName>
    <formula>(Total_Cost__c  +  Total_Hardware_Refresh_Costs__c ) *  Currency_Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>