force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_CTNs_BB__c.field-meta.xml
<CustomField>
    <fullName>Total_CTNs_BB__c</fullName>
    <formula>BB_CTNs_New__c  +  BB_CTNs_Existing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CTNs BB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>