force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_CTNs_HH__c.field-meta.xml
<CustomField>
    <fullName>Total_CTNs_HH__c</fullName>
    <formula>HH_CTNs_New__c  +  HH_CTNs_Existing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CTNs HH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>