force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_CTNs_MCC__c.field-meta.xml
<CustomField>
    <fullName>Total_CTNs_MCC__c</fullName>
    <formula>MCC_CTNs_New__c  +  MCC_CTNs_Existing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CTNs MCC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>