force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_CTNs_Voice__c.field-meta.xml
<CustomField>
    <fullName>Total_CTNs_Voice__c</fullName>
    <formula>Voice_CTNs_New__c  +  Voice_CTNs_Existing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CTNs Voice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>