force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_Hardware_Refresh_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware_Refresh_Costs__c</fullName>
    <label>Total Hardware Refresh Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>