force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_Revenue_Converted__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Converted__c</fullName>
    <formula>Total_Revenue__c  *  Currency_Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue (Converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>