force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_Usage_Data__c.field-meta.xml
<CustomField>
    <fullName>Total_Usage_Data__c</fullName>
    <label>Total Usage (Data)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>