force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Total_Usage_Voice__c.field-meta.xml
<CustomField>
    <fullName>Total_Usage_Voice__c</fullName>
    <label>Total Usage (Voice)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>