force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/VGE_Country__c.field-meta.xml
<CustomField>
    <fullName>VGE_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VGE Country</label>
    <referenceTo>PLCountry__c</referenceTo>
    <relationshipLabel>VGE PL Country Summary</relationshipLabel>
    <relationshipName>VGE_PL_Country_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>