force-app/main/default/objects/VGE_PL_Country_Summary__c/fields/Voice_CTNs_Existing__c.field-meta.xml
<CustomField>
    <fullName>Voice_CTNs_Existing__c</fullName>
    <label>Voice CTNs (Existing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>