force-app/main/default/objects/VGE_PL_Country_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>CountryIsoCode__c</columns>
    <columns>BB_CTNs_New__c</columns>
    <columns>BB_CTNs_Existing__c</columns>
    <columns>HH_CTNs_Existing__c</columns>
    <columns>HH_CTNs_New__c</columns>
    <columns>MCC_CTNs_Existing__c</columns>
    <columns>MCC_CTNs_New__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>